// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/ChannelIntroMessages test DEFAULT Channel should match snapshot, with enable, group constrained 1`] = `
<div
  className="channel-intro "
  id="channelIntro"
>
  <h2
    className="channel-intro__title"
  >
    <MemoizedFormattedMessage
      defaultMessage="Beginning of {name}"
      id="intro_messages.beginning"
      values={
        Object {
          "name": "test channel",
        }
      }
    />
  </h2>
  <p
    className="channel-intro__content"
  >
    <FormattedMarkdownMessage
      defaultMessage="**Welcome to {display_name}!**\\\\n \\\\nPost messages here that you want everyone to see. Everyone automatically becomes a permanent member of this channel when they join the team."
      id="intro_messages.default"
      values={
        Object {
          "display_name": "test channel",
        }
      }
    />
  </p>
  <Connect(TeamPermissionGate)
    permissions={
      Array [
        "invite_user",
      ]
    }
    teamId="team-id"
  >
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "add_user_to_team",
        ]
      }
      teamId="team-id"
    >
      <ToggleModalButton
        className="intro-links color--link"
        dialogProps={
          Object {
            "channel": Object {
              "create_at": 1508265709607,
              "creator_id": "creator_id",
              "delete_at": 0,
              "display_name": "test channel",
              "header": "test",
              "id": "channel_id",
              "last_post_at": 1508265709635,
              "name": "town-square",
              "purpose": "test",
              "team_id": "team-id",
              "type": "O",
              "update_at": 1508265709607,
            },
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        modalId="add_groups_to_team"
      >
        <i
          className="fa fa-user-plus"
        />
        <MemoizedFormattedMessage
          defaultMessage="Add other groups to this team"
          id="intro_messages.addGroupsToTeam"
        />
      </ToggleModalButton>
    </Connect(TeamPermissionGate)>
  </Connect(TeamPermissionGate)>
  <Connect(PluggableIntroButtons)
    channel={
      Object {
        "create_at": 1508265709607,
        "creator_id": "creator_id",
        "delete_at": 0,
        "display_name": "test channel",
        "header": "test",
        "id": "channel_id",
        "last_post_at": 1508265709635,
        "name": "town-square",
        "purpose": "test",
        "team_id": "team-id",
        "type": "O",
        "update_at": 1508265709607,
      }
    }
  />
  <Connect(Component)
    channelId="channel_id"
    permissions={
      Array [
        "manage_public_channel_properties",
      ]
    }
    teamId="team-id"
  >
    <ToggleModalButton
      ariaLabel="Set a Header"
      className="intro-links color--link channelIntroButton"
      dialogProps={
        Object {
          "channel": Object {
            "create_at": 1508265709607,
            "creator_id": "creator_id",
            "delete_at": 0,
            "display_name": "test channel",
            "header": "test",
            "id": "channel_id",
            "last_post_at": 1508265709635,
            "name": "town-square",
            "purpose": "test",
            "team_id": "team-id",
            "type": "O",
            "update_at": 1508265709607,
          },
        }
      }
      dialogType={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "type": [Function],
        }
      }
      modalId="edit_channel_header"
    >
      <EditIcon />
      <MemoizedFormattedMessage
        defaultMessage="Set a Header"
        id="intro_messages.setHeader"
      />
    </ToggleModalButton>
  </Connect(Component)>
  <br />
</div>
`;

exports[`components/post_view/ChannelIntroMessages test DEFAULT Channel should match snapshot, with enableUserCreation 1`] = `
<div
  className="channel-intro "
  id="channelIntro"
>
  <h2
    className="channel-intro__title"
  >
    <MemoizedFormattedMessage
      defaultMessage="Beginning of {name}"
      id="intro_messages.beginning"
      values={
        Object {
          "name": "test channel",
        }
      }
    />
  </h2>
  <p
    className="channel-intro__content"
  >
    <FormattedMarkdownMessage
      defaultMessage="**Welcome to {display_name}!**\\\\n \\\\nPost messages here that you want everyone to see. Everyone automatically becomes a permanent member of this channel when they join the team."
      id="intro_messages.default"
      values={
        Object {
          "display_name": "test channel",
        }
      }
    />
  </p>
  <Connect(TeamPermissionGate)
    permissions={
      Array [
        "invite_user",
      ]
    }
    teamId="team-id"
  >
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "add_user_to_team",
        ]
      }
      teamId="team-id"
    >
      <Memo(AddMembersButton)
        channel={
          Object {
            "create_at": 1508265709607,
            "creator_id": "creator_id",
            "delete_at": 0,
            "display_name": "test channel",
            "header": "test",
            "id": "channel_id",
            "last_post_at": 1508265709635,
            "name": "town-square",
            "purpose": "test",
            "team_id": "team-id",
            "type": "O",
            "update_at": 1508265709607,
          }
        }
        pluginButtons={
          <Memo(Connect(PluggableIntroButtons))
            channel={
              Object {
                "create_at": 1508265709607,
                "creator_id": "creator_id",
                "delete_at": 0,
                "display_name": "test channel",
                "header": "test",
                "id": "channel_id",
                "last_post_at": 1508265709635,
                "name": "town-square",
                "purpose": "test",
                "team_id": "team-id",
                "type": "O",
                "update_at": 1508265709607,
              }
            }
          />
        }
        setHeader={
          <Memo(Connect(Component))
            channelId="channel_id"
            permissions={
              Array [
                "manage_public_channel_properties",
              ]
            }
            teamId="team-id"
          >
            <ToggleModalButton
              ariaLabel="Set a Header"
              className="intro-links color--link channelIntroButton"
              dialogProps={
                Object {
                  "channel": Object {
                    "create_at": 1508265709607,
                    "creator_id": "creator_id",
                    "delete_at": 0,
                    "display_name": "test channel",
                    "header": "test",
                    "id": "channel_id",
                    "last_post_at": 1508265709635,
                    "name": "town-square",
                    "purpose": "test",
                    "team_id": "team-id",
                    "type": "O",
                    "update_at": 1508265709607,
                  },
                }
              }
              dialogType={
                Object {
                  "$$typeof": Symbol(react.memo),
                  "WrappedComponent": [Function],
                  "compare": null,
                  "type": [Function],
                }
              }
              modalId="edit_channel_header"
            >
              <EditIcon />
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Set a Header"
                id="intro_messages.setHeader"
              />
            </ToggleModalButton>
          </Memo(Connect(Component))>
        }
        usersLimit={10}
      />
    </Connect(TeamPermissionGate)>
  </Connect(TeamPermissionGate)>
  <br />
</div>
`;
